<resources>
    <string name="app_name">PitchWarrior</string>
    <string name="welcome_to_pitch_warrior">Welcome to Pitch Warrior</string>
    <string name="password">Password</string>
    <string name="new_username">New Username</string>
    <string name="new_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_create_new_account">Or create new account:</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="create">Create</string>
    <string name="nextpage">Next Page</string>
    <string name="cNat">C</string>
    <string name="cSha">C#</string>
    <string name="dNat">D</string>
    <string name="dSha">D#</string>
    <string name="eNat">E</string>
    <string name="fNat">F</string>
    <string name="fSha">F#</string>
    <string name="gNat">G</string>
    <string name="gSha">G#</string>
    <string name="aNat">A</string>
    <string name="aSha">A#</string>
    <string name="bNat">B</string>
    <string name="randomNote">random Note</string>
    <string name="Correct">Correct</string>
    <string name="Incorrect">Incorrect</string>
    <string name="Percentage">Percentage</string>
    <string name="timer">Timer</string>
    <string name="records">Records</string>
    <string name="Records">Records</string>
    <string name="no_data">No data</string>
    <string name="startGame">Start Game</string>
    <string name="endGame">End Game</string>
    <string name="currenStreak">Current Streak</string>
    <string name="bestStreak">Best Streak</string>
    <string name="title_activity_results">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="your_results">Your Results</string>
    <string name="rank">Rank</string>
    <string name="view_records">View Records</string>
    <string name="Rank">Rank</string>
    <string name="username">Username</string>
    <string name="points">Points</string>
    <string name="accuracy">Accuracy</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="streak">Streak</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="game_type">Game Type</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="get_ready_to_play">Get ready to play!</string>
    <string name="confirm">Confirm</string>
    <string-array name="gameTypes">
        <item>30 Second Game</item>
        <item>1 Minute Game</item>
        <item>2 Minute Game</item>
    </string-array>

</resources>
