<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewContentsHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Records" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start">

            <TextView
                android:id="@+id/rank"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/Rank" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/username" />

            <TextView
                android:id="@+id/points"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/points" />

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/accuracy" />

            <TextView
                android:id="@+id/correct"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/correct" />

            <TextView
                android:id="@+id/incorrect"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/incorrect" />

            <TextView
                android:id="@+id/bestStreak"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/streak" />

            <TextView
                android:id="@+id/date"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/date" />

            <TextView
                android:id="@+id/time"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/time" />

            <TextView
                android:id="@+id/gameType"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/game_type" />

        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/listView" />

    </LinearLayout>



</HorizontalScrollView>
