<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:padding="5dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".Game">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/records" />

        <Spinner
            android:id="@+id/gameTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickStartGame"
            android:text="@string/startGame" />

        <Button
            android:id="@+id/endGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnClickEndGame"
            android:text="@string/endGame" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:layout_weight="1"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Percentage"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bestStreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bestStreak"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/currentStreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currenStreak"
            android:layout_weight="1"/>


    </LinearLayout>





    <TextView
        android:id="@+id/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer" />

    <TextView
        android:id="@+id/gameFeedbackTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/get_ready_to_play" />






    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="2dp"
        android:layout_height="101dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <View
                            android:id="@+id/cNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"

                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/dNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>
                        <View
                            android:id="@+id/eNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="1dp"
                        android:layout_height="60dp"
                        android:background="@color/colorPrimaryDark">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/cShaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/colorPrimaryDark"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/dShaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/colorPrimaryDark"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@color/cardview_light_background"/>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <View
                            android:id="@+id/fNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/gNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>
                        <View
                            android:id="@+id/aNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>
                        <View
                            android:id="@+id/bNatButton"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_weight="1"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/cardview_light_background"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_height="60dp"
                        android:background="@color/colorPrimaryDark">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/fShaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/colorPrimaryDark"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/gShaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/colorPrimaryDark"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/cardview_light_background"/>

                        <View
                            android:id="@+id/aShaButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onClickUserPlaySound"
                            android:background="@color/colorPrimaryDark"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@color/cardview_light_background"/>

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>


